@@ -1,5 +1,8 @@
+2012-08-12 dschulze@adobe.com
+	More clarification on used terms.
+
 2012-08-11 dschulze@adobe.com
-	Changed syntax for 'mask' property to match initial intention.
+	Changed syntax for 'mask' and other properties to fit initial intention.
 
 2012-08-11 dschulze@adobe.com
 	Added 'The Masking Rendering Model' section.
